================= Unreleased ==================
; Feature ; Minor ; PyFMI ; #5475
Added support for getting the declared type when using FMI2.

; Fixed ; Minor ; PyFMI ; #5476
Fixed issue with results for parameters when using memory storing option.

; Fixed ; Major ; Build system; #5459
Added support for building CasADi in 32 and 64 bit modes
in parallel when 64 bit Python and Ipopt available.
 
================= Stable-2017-10-05 ==================
; Feature ; Minor ; PyFMI ; #5470
Added support to store result files on binary format.

================= Stable-2017-09-28 ==================
; Change ; Minor ; Build system ; #5459
Refactored configure.ac.

; Change ; Minor ; Examples ; #5459
Updated furuta example asserts to correspond to updated FMU.

; Fixed ; Minor ; Compiler ; #5465
Added derivative attribute to dummy derivatives in model description so it's FMI compliant.

; Changed; Minor; Tests; #5459
Updated more of tests_jmodelica FMUs to have 64 bit binaries as well.

; Changed; Minor; Tests; #5459
Updated tests_jmodelica FMUs to have 64 bit binaries as well.

; Fixed ; Minor ; Documentation ; #5466
Added information about limitation regarding Q-identifiers. 

; Fixed ; Minor ; Compiler ; #5460
Fixed bug where indices in for expressions got modifications intended for actual variables. 

; Fixed ; Major ; Build system ; #5459
Added support for building Assimulo, PyFMI, PyJMI, pymodelica  in
both 32 and 64 bit modes on windows when corresponding Python distributions
are available.

; Fixed ; Minor ; Compiler ; #5346
Fixed code generation error for expanded expressions of arrays in record arrays

; Fixed ; Minor ; Compiler ; #5219
Fixed bug in BLT computation for initial system where start value of variables
could depend on variables which were computed after the variable it self.

; Fixed ; Minor ; Python ; #5455
Fixed build system to handle 64bit FMIL builds correctly.

; Fixed ; Minor ; Python ; #5454